[gd_scene load_steps=7 format=3 uid="uid://b4oegmwy2nfjb"]

[ext_resource type="Script" path="res://game_manager.gd" id="1_5hieu"]
[ext_resource type="PackedScene" uid="uid://hs7jg1vnrv64" path="res://road.tscn" id="1_hxaqk"]
[ext_resource type="PackedScene" uid="uid://bgty60d4648an" path="res://skater.tscn" id="2_sr1bj"]
[ext_resource type="PackedScene" uid="uid://27fnss8hbtnf" path="res://obstacle.tscn" id="3_dvsk4"]
[ext_resource type="PackedScene" uid="uid://c6ue14hby6w0t" path="res://scenes/GUI.tscn" id="6_a4s2l"]
[ext_resource type="PackedScene" uid="uid://d3egooxq20e3k" path="res://scenes/game_nodes/enemy_generator.tscn" id="7_evwqh"]

[node name="level" type="Node2D"]
y_sort_enabled = true
position = Vector2(577, 326)
scale = Vector2(2.15478, 3.23)
script = ExtResource("1_5hieu")

[node name="road" parent="." instance=ExtResource("1_hxaqk")]
z_index = -1
position = Vector2(-0.988937, 4.17956)
scale = Vector2(1.00502, 1.27709)

[node name="obst3" parent="." instance=ExtResource("3_dvsk4")]
position = Vector2(327.643, 24.4582)

[node name="obst2" parent="." instance=ExtResource("3_dvsk4")]
position = Vector2(260.351, -23.5294)

[node name="obst1" parent="." instance=ExtResource("3_dvsk4")]
position = Vector2(130.408, 14.5511)

[node name="obst4" parent="." instance=ExtResource("3_dvsk4")]
position = Vector2(374.516, 8.35913)

[node name="skater" parent="." instance=ExtResource("2_sr1bj")]
position = Vector2(-182.385, 3.09598)

[node name="menu" parent="." instance=ExtResource("6_a4s2l")]
visible = false

[node name="EnemyGenerator" parent="." instance=ExtResource("7_evwqh")]

[connection signal="player_died" from="skater" to="." method="_on_node_2d_player_died"]
[connection signal="game_over" from="menu" to="." method="_on_menu_game_over"]
[connection signal="restart_game" from="menu" to="." method="_on_menu_restart_game"]
[connection signal="resume_game" from="menu" to="." method="_on_menu_resume_game"]
